--- a/Thirdyear.html
+++ b/Thirdyear.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Firstyear</title>
+    <title>Third year</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"  />
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
 </head>
@@ -805,32 +805,31 @@ display: inline;
         <div class="information">
            <h3> ---There are going to be three main pilar that you have to be focusing on in first year---</h3>
 <div class="piller1">
-    <h3 class="tittle1">#01 Networking</h3>
+    <h3 class="tittle1">#01 Design</h3>
     <div class="networking">
 <div class="info">
 <h4 class="info1"> 
-    Networking on LinkedIn and Twitter connects students with industry professionals, offering insights, advice, and job opportunities. Active engagement helps build meaningful connections and expand their professional network. Curating profiles showcases achievements, enhancing visibility to potential employers. Participation in groups and chats allows students to contribute and establish expertise. Leveraging these platforms empowers students to proactively shape their career paths and gain valuable industry knowledge.
-</h4></div>
+  UI/UX design merges aesthetics and functionality to craft user-friendly digital experiences, enhancing satisfaction and engagement. It combines intuitive interface design with understanding user behavior for seamless navigation.</h4></div>
 
 <div class="linkdin">
 <h2>
-linkdin
+beginner
 </h2>
 
-<h4>LinkedIn offers professional networking, job opportunities, and personal branding. It provides industry insights and supports continuous learning.</h4>
+<h4>Certainly: 1. Scope: UI/UX designers in India have diverse opportunities across industries. 2. Entry-Level: Salaries start at ₹3-6 lakhs/year with benefits.</h4>
 
-<iframe   width="440" height="255"  src="https://www.youtube.com/embed/-74aDZXY50M?si=zU6Nyn1n7ji3gIRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe src="https://www.youtube.com/embed/ddQHFKVrCkU?si=q-TJwwPzXmUH5GAd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><br>
 </div>
 
 
 
 <div class="twitter">
 <h2>
-Twitter
+advanced
 </h2>
 
-<h4>Twitter is a valuable tool for students, offering networking, news updates, and opportunities for personal and professional development.</h4>
-<iframe width="440" height="255" src="https://www.youtube.com/embed/qpUdrLRxuVo?si=zONlyp3J_RnOzRsZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<h4>Certainly: 1. Scope: UI/UX designers in India have diverse opportunities across industries. 2. Entry-Level: Salaries start at ₹3-6 lakhs/year with benefits.</h4>
+<iframe  src="https://www.youtube.com/embed/videoseries?si=b3mDOLxd-hp11_82&amp;list=PLlHtucAD9KT2VKBwCZooIvDAiJQZ0Hrur" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 </div>
 </div>
@@ -838,10 +837,10 @@ Twitter
 
 
         <div class="piller2">
-          <h3 class="tittle1">#02 programing</h3>
+          <h3 class="tittle1">#02 MACHINE LEARNING</h3>
           <div class="programing"> 
 
-<h4 class="info1">Programming skills are invaluable for students during placements, offering enhanced problem-solving, creativity, adaptability, and competitiveness in the job market. They empower students to innovate independently, showcasing leadership potential and ensuring success in their placements and beyond.
+<h4 class="info1">Machine learning is a branch of artificial intelligence where algorithms learn from data to make predictions or decisions. It encompasses techniques such as supervised learning, unsupervised learning, and reinforcement learning. Its applications range from image recognition and natural language processing to recommendation systems and autonomous vehicles.
 
     </h4>
 <br><br><br>
@@ -849,9 +848,11 @@ Twitter
        Python
     </h2>
 
-    <h4>Learning Python in your first year is advantageous. Its simplicity and versatility cater to beginners, and its popularity creates abundant job opportunities. With high-level features and industry relevance, Python offers a solid foundation for diverse tech careers.</h4>
+    <h4>Machine learning careers span sectors like healthcare and finance.
+      Entry roles: ML engineer, data scientist.
+      Entry salaries in India: <b>₹4-8 lakhs/year</b>.</h4>
 
-    <iframe width="400" height="255" src="https://www.youtube.com/embed/_uQrJ0TkZlc?si=LOgeP10XFyUWOfgF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe  src="https://www.youtube.com/embed/videoseries?si=oi6lrhEVBqpYmVXg&amp;list=PLjVLYmrlmjGe-xLyoCdDrt8Nil1Alg_L3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><br>
 </div>
 <br><br>
 
@@ -861,9 +862,11 @@ Twitter
     Dsa in python
     </h2>
 
-    <h4>Learning DSA in Python early on is advantageous. Its simplicity aids in grasping core concepts swiftly, its vast library and industry relevance streamline implementation, and its versatility lays a strong foundation for a tech career.</h4>
+    <h4>Machine learning careers span sectors like healthcare and finance.
+      Entry roles: ML engineer, data scientist.
+      Entry salaries in India: <b>₹4-8 lakhs/year</b>.</h4>
 
-   <iframe width="440" height="255" src="https://www.youtube.com/embed/pkYVOmU3MgA?si=y6HEKSkwCNtlm29v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe  src="https://www.youtube.com/embed/videoseries?si=X1NVhhfC2vXIq57N&amp;list=PLeo1K3hjS3uvCeTYTeyfe0-rN5r8zn9rw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><br>
         </div>
     </div>
 </div>
